GA-44: Added support in saving product history
**Changes:**

- see title

**References:**

- Subtask: GA-44