@@ -2,16 +2,20 @@ package com.joliest.portfolios.groceryapi.service;
 
 import com.joliest.portfolios.groceryapi.domain.entity.CategoryEntity;
 import com.joliest.portfolios.groceryapi.domain.entity.ProductEntity;
+import com.joliest.portfolios.groceryapi.domain.entity.PurchaseHistoryEntity;
 import com.joliest.portfolios.groceryapi.domain.entity.StoreEntity;
 import com.joliest.portfolios.groceryapi.domain.entity.SubcategoryEntity;
 import com.joliest.portfolios.groceryapi.domain.repository.CategoryRepository;
+import com.joliest.portfolios.groceryapi.domain.repository.PurchaseHistoryRepository;
 import com.joliest.portfolios.groceryapi.domain.repository.ProductRepository;
 import com.joliest.portfolios.groceryapi.domain.repository.StoreRepository;
 import com.joliest.portfolios.groceryapi.domain.repository.SubcategoryRepository;
 import com.joliest.portfolios.groceryapi.model.Product;
 import com.joliest.portfolios.groceryapi.model.Products;
+import com.joliest.portfolios.groceryapi.model.PurchaseHistory;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
 import java.util.Optional;
@@ -27,40 +31,60 @@ public class ProductService {
     private final StoreRepository storeRepository;
     private final CategoryRepository categoryRepository;
     private final SubcategoryRepository subcategoryRepository;
+    private final PurchaseHistoryRepository purchaseHistoryRepository;
 
     public List<Product> getProducts() {
         return productRepository.findAll().stream()
-                .map(productEntity ->
-                        Product.builder()
-                                .id(productEntity.getId())
-                                .name(productEntity.getName())
-                                .price(productEntity.getPrice())
-                                .store(productEntity.getStore().getName())
-                                .category(productEntity.getCategory().getName())
-                                .subcategory(productEntity.getSubcategory().getName())
-                                .link(productEntity.getLink())
-                                .datePurchased(convertDateToDefaultFormat(productEntity.getDatePurchased()))
-                                .build()
-                ).collect(Collectors.toList());
+                .map(productEntity -> {
+                    List<PurchaseHistory> purchaseHistoryList = productEntity.getHistories()
+                            .stream()
+                            .map(purchaseHistoryEntity -> PurchaseHistory.builder()
+                                    .store(productEntity.getStore().getName())
+                                    .id(purchaseHistoryEntity.getId())
+                                    .link(purchaseHistoryEntity.getLink())
+                                    .price(purchaseHistoryEntity.getPrice())
+                                    .datePurchased(convertDateToDefaultFormat(purchaseHistoryEntity.getDatePurchased()))
+                                    .build())
+                            .toList();
+
+                    return Product.builder()
+                            .id(productEntity.getId())
+                            .name(productEntity.getName())
+                            .price(productEntity.getPrice())
+                            .store(productEntity.getStore().getName())
+                            .category(productEntity.getCategory().getName())
+                            .subcategory(productEntity.getSubcategory().getName())
+                            .link(productEntity.getLink())
+                            .datePurchased(convertDateToDefaultFormat(productEntity.getDatePurchased()))
+                            .purchaseHistoryList(purchaseHistoryList)
+                            .build();
+                }).collect(Collectors.toList());
     }
 
     public Product addProduct(Product product) {
-        ProductEntity newProduct = convertProductToEntity(product);
-
-        ProductEntity productEntity = productRepository.save(newProduct);
+        ProductEntity productEntity = convertProductToEntity(product);
+        PurchaseHistoryEntity productHistoryEntity = PurchaseHistoryEntity.builder()
+                .product(productEntity)
+                .store(productEntity.getStore())
+                .price(product.getPrice())
+                .datePurchased(convertStrToLocalDateTime(product.getDatePurchased()))
+                .link(product.getLink())
+                .build();
+        purchaseHistoryRepository.save(productHistoryEntity);
 
         return Product.builder()
                 .id(productEntity.getId())
                 .name(productEntity.getName())
-                .price(productEntity.getPrice())
                 .category(productEntity.getCategory().getName())
                 .subcategory(productEntity.getSubcategory().getName())
-                .link(productEntity.getLink())
-                .datePurchased(convertDateToDefaultFormat(productEntity.getDatePurchased()))
-                .store(productEntity.getStore().getName())
+                .datePurchased(convertDateToDefaultFormat(productHistoryEntity.getDatePurchased()))
+                .price(productHistoryEntity.getPrice())
+                .link(productHistoryEntity.getLink())
+                .store(productHistoryEntity.getStore().getName())
                 .build();
     }
 
+    @Transactional
     public List<Product> addMultipleProducts(Products products) {
         List<Product> productList = products.getProducts();
         return productList.stream()
@@ -69,39 +93,46 @@ public class ProductService {
     }
 
     private ProductEntity convertProductToEntity(Product product) {
+        Optional<ProductEntity> foundProduct = findProduct(product);
         StoreEntity storeEntity = getProductStoreEntity(product.getStore());
-        CategoryEntity categoryEntity = getProductCategoryEntity(product.getCategory());
-        SubcategoryEntity subcategoryEntity = getProductSubcategoryAndAssignToCategory(product.getSubcategory(), categoryEntity);
-        return ProductEntity.builder()
-                .name(product.getName())
-                .price(product.getPrice())
-                .category(categoryEntity)
-                .subcategory(subcategoryEntity)
-                .link(product.getLink())
-                .datePurchased(convertStrToLocalDateTime(product.getDatePurchased()))
-                .store(storeEntity)
-                .store(storeEntity)
-                .build();
+
+        if (foundProduct.isEmpty()) {
+            CategoryEntity categoryEntity = getProductCategoryEntity(product.getCategory());
+            SubcategoryEntity subcategoryEntity = getProductSubcategoryAndAssignToCategory(product.getSubcategory(), categoryEntity);
+            ProductEntity newProduct =  ProductEntity.builder()
+                    .name(product.getName())
+                    .price(product.getPrice())
+                    .category(categoryEntity)
+                    .subcategory(subcategoryEntity)
+                    .link(product.getLink())
+                    .datePurchased(convertStrToLocalDateTime(product.getDatePurchased()))
+                    .store(storeEntity)
+                    .build();
+            return productRepository.save(newProduct);
+        }
+        return foundProduct.get();
+    }
+
+    private Optional<ProductEntity> findProduct(Product product) {
+        return productRepository.findFirstByNameAndCategoryNameAndSubcategoryName(
+                product.getName(),
+                product.getCategory(),
+                product.getSubcategory());
+    }
+
+    private StoreEntity getProductStoreEntity(String productStore) {
+        Optional<StoreEntity> foundEntity = storeRepository.findByName(productStore);
+        return foundEntity.orElseGet(() -> createNewStore(productStore));
     }
 
     private SubcategoryEntity getProductSubcategoryAndAssignToCategory(String subcategory, CategoryEntity categoryEntity) {
         Optional<SubcategoryEntity> foundEntity = subcategoryRepository.findByNameAndCategory(subcategory, categoryEntity);
-        if (foundEntity.isEmpty()) {
-            SubcategoryEntity newSubcategory = SubcategoryEntity.builder()
-                    .category(categoryEntity)
-                    .name(subcategory)
-                    .build();
-            return subcategoryRepository.save(newSubcategory);
-        }
-        return foundEntity.get();
+        return foundEntity.orElseGet(() -> createNewSubcategory(subcategory, categoryEntity));
     }
 
     private CategoryEntity getProductCategoryEntity(String category) {
         Optional<CategoryEntity> foundEntity = categoryRepository.findByName(category);
-        if (foundEntity.isEmpty()) {
-            return createNewCategory(category);
-        }
-        return foundEntity.get();
+        return foundEntity.orElseGet(() -> createNewCategory(category));
     }
 
     private CategoryEntity createNewCategory(String category) {
@@ -110,12 +141,11 @@ public class ProductService {
                 .build());
     }
 
-    private StoreEntity getProductStoreEntity(String productStore) {
-        Optional<StoreEntity> foundEntity = storeRepository.findByName(productStore);
-        if (foundEntity.isEmpty()) {
-            return createNewStore(productStore);
-        }
-        return foundEntity.get();
+    private SubcategoryEntity createNewSubcategory(String subcategory, CategoryEntity categoryEntity) {
+        return subcategoryRepository.save(SubcategoryEntity.builder()
+                .category(categoryEntity)
+                .name(subcategory)
+                .build());
     }
 
     private StoreEntity createNewStore(String productStore) {
